# aacencoder

./: .gitignore  CMakeLists.txt  FdkAACEncoder.cpp  FdkAACEncoder.h  IAACEncoder.h  IAudioEncoder.h  VoAACEncoder.cpp  VoAACEncoder.h
android/jni/: Android.mk  Application.mk
test/: CMakeLists.txt  FdkAACEncoder_main.cpp  VoAACEncoder_main.cpp
